# youtubeservice

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/workflows/: docker-image.yml  docker-publish.yml
migrations/2021-08-25-232650_create_livechat_message/: down.sql  up.sql
src/: log.rs  models.rs  schema.rs  server.rs  youtube.rs
