[package]
name = "youtubeservice"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "youtubeservice-server"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5.2"
prost = "0.8.0"
futures-core = "0.3.17"
futures-util = "0.3.17"
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.7"
async-stream = "0.3.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
rand = "0.8.4"
prost-types = "0.8.0"
async-channel = "1.6.1"
google-youtube3 = "2.0.8+20210330"
hyper = "0.14.12"
hyper-rustls = "0.22.1"
yup-oauth2 = "5.1.0"
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.14"
chrono = "0.4.19"
diesel = { version = "1.4.7", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
r2d2 = "0.8.9"

[build-dependencies]
tonic-build = "0.5.2"